fixed feedback layout issue and improved spacing issues

--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ input {
   margin-bottom: 15px;
 }
 
-
 button {
   width: auto;
   padding: 20px;
@@ -131,10 +130,24 @@ button {
   text-shadow: 0px 1px 1px #808080;
   font-size: 1em;
   /* border: 3px solid #8B4513; */
+  margin-bottom: 30px;
 }
 
 button:hover {
   border: 3px solid #620;
+}
+
+#answer-result {
+  margin-bottom: 15px;
+}
+
+#answer-comment {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+#next-question {
+  margin-top: 15px;
 }
 
 img {
